# projetxaxalulu

./: DESIGN.md  README.md  constants.py  entities.py  gameview.py  main.py  map.py  pyproject.toml  textures.py
dark-magenta/: pyproject.toml
dark-magenta/maps/: testmap.txt
maps/: mainmap.txt  map1.txt  map2.txt  testmap.txt
tests/: conftest.py  test_collect_crystals.py  test_coordinate_conversion.py  test_entities.py  test_gameview.py  test_map.py
